<resources>
    <string name="app_name">Recigram</string>
    <string name="app_descrip">Tus ingredientes, nuestras recetas</string>
    <string name="crearCuenta">Crear una cuenta</string>
    <string name="yatienes">¿Ya tienes una cuenta?</string>
    <string name="iniciaSesion">Inicia Sesión</string>
    <string name="creartuCuenta">Crear tu cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="mail">Correo Electrónico</string>
    <string name="contra">Contraseña</string>
    <string name="recontra">Repite tu contraseña</string>
    <string name="aceptolos">Acepto los</string>
    <string name="terminosCond">Términos y Condiciones</string>
    <string name="aunotienes">¿Aún no tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="terminosY">Términos y</string>
    <string name="condiciones">Condiciones</string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem2">Maecenas rhoncus lorem quis dapibus elementum.</string>
    <string name="lorem3">Morbi eget lectus in turpis fermentum porttitor vel eget.</string>
    <string name="lorem4">Maecenas pretium ante vel purus varius, ac consectetur massa fringilla.</string>
    <string name="lorem5">Fusce fermentum nisl eu est elementum porta.</string>
    <string name="lorem6">Aenean volutpat dui et dui auctor, eget bibendum risus vestibulum.</string>
    <string name="lorem7">Mauris nec urna sit amet mi sollicitudin mattis suscipit sit amet est.</string>
    <string name="aceptarVolver">Aceptar y Volver</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="platilloHoy">El platillo de hoy</string>
    <string name="chilaquilesRojos">Chilaquiles Rojos</string>
    <string name="ver">Ver</string>
    <string name="mostrarRecetas">Mostrar Recetas</string>
    <string name="buscarIngrediente">Buscar Por Ingrediente</string>
    <string name="porciones">Porciones</string>
    <string name="dificultad">Dificultad</string>
    <string name="tiempo">Tiempo</string>
    <string name="num">0</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="irProcedimiento">Ir al procedimiento</string>
    <string name="procedimiento">Procedimiento</string>
    <string name="recetas">Recetas</string>
    <string name="busqueda">Búsqueda</string>
    <string name="buscar">Buscar</string>
    <string name="textoBusqueda">Selecciona los ingredientes por los cuales quieres realizar la búsqueda</string>
    <string name="tomate">Tomate</string>
    <string name="carne">Carne</string>
    <string name="cebolla">Cebolla</string>
    <string name="jamon">Jamón</string>
    <string name="pollo">Pollo</string>
    <string name="pan">Pan</string>
    <string name="pasta">Pasta</string>
    <string name="elote">Elote</string>
    <string name="chile">Chile</string>
    <string name="aceitunas">Aceitunas</string>
    <string name="queso">Queso</string>
    <string name="pepino">Pepino</string>
    <string name="tortillas">Tortillas</string>
    <string name="salchicha">Salchicha</string>
    <string name="mayonesa">Mayonesa</string>
    <string name="mostaza">Mostaza</string>
    <string name="resultados">Resultados</string>
    <string name="arrozleche">Arroz con Leche</string>

</resources>