<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crear_cuenta">

    <TextView
        android:id="@+id/tv_crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/creartuCuenta"
        android:textSize="45sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_espacioNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nombre"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/et_nombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_crearCuenta" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="16"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_espacioNombre" />

    <TextView
        android:id="@+id/tv_espacioMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mail"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/et_mail"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="16"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_espacioMail" />

    <TextView
        android:id="@+id/tv_espacioContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contra"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/et_contra"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <EditText
        android:id="@+id/et_contra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="16"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_espacioContra" />

    <TextView
        android:id="@+id/tv_espacioReContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recontra"
        android:textColor="@color/darkGray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/et_reContra"
        app:layout_constraintTop_toBottomOf="@+id/et_contra" />

    <EditText
        android:id="@+id/et_reContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="16"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_espacioReContra" />

    <CheckBox
        android:id="@+id/cb_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/et_reContra"
        app:layout_constraintTop_toBottomOf="@id/et_reContra" />

    <TextView
        android:id="@+id/tv_acepterms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/aceptolos"
        android:textSize="15sp"
        android:textColor="@color/darkGray"
        app:layout_constraintStart_toStartOf="@id/cb_terms"
        app:layout_constraintTop_toBottomOf="@+id/et_reContra" />

    <TextView
        android:id="@+id/tv_aceptermss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminosCond"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/tv_acepterms"
        app:layout_constraintTop_toBottomOf="@+id/et_reContra" />

    <Button
        android:id="@+id/btn_Crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/crearCuenta"
        android:background="@drawable/btn_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_aceptermss" />

</androidx.constraintlayout.widget.ConstraintLayout>