<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".casa">

    <TextView
        android:id="@+id/tv_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bienvenido"
        android:textColor="@color/orange"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_platillodia"
        android:layout_width="285dp"
        android:layout_height="338dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/fondo_redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bienvenida"/>

    <TextView
        android:id="@+id/tv_platilloHoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/platilloHoy"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_platillodia" />

    <ImageView
        android:id="@+id/iv_platillo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_platilloHoy"
        app:srcCompat="@drawable/chila" />

    <TextView
        android:id="@+id/tv_nombrePlatillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chilaquilesRojos"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_platillo" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ver"
        android:background="@drawable/btn_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombrePlatillo" />

    <FrameLayout
        android:id="@+id/frame_opciones"
        android:layout_width="285dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/fondo_redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_platillodia"/>

    <Button
        android:id="@+id/btn_mostrarRecetas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_redondo"
        android:text="@string/mostrarRecetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frame_opciones" />

    <Button
        android:id="@+id/btn_buscarIngrediente"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_redondo"
        android:text="@string/buscarIngrediente"
        app:layout_constraintBottom_toBottomOf="@+id/frame_opciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>